<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FB8E20"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewAvatar"
            android:layout_width="50dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:src="@drawable/photoprofil" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewMyName"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:text="@string/myname"
                android:textColor="#FFFFFF"
                android:textSize="32dp" />

            <TextView
                android:id="@+id/textViewPhone"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:textColor="#FFFFFF"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:text="@string/email"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/adresse" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="32dp"
        android:textColor="#FB8E20"
        android:text="@string/title_exp" />

    <ListView
        android:id="@+id/listViewExperiences"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_experience" />

    <TextView
        android:id="@+id/textView2"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32dp"
        android:textColor="#FB8E20"
        android:text="@string/title_form" />

    <ListView
        android:id="@+id/listViewFormations"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_formation" />

    <Button
        android:id="@+id/buttonCompetence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_comp"
        android:background="#FB8E20"
        android:layout_margin="15dp"/>
</LinearLayout>